Roundcube Webmail MarkASJunk2
=============================

2010 02 23
==========
 * Update after r3261

2010 02 14
==========
 * Another update after r3258

2010 02 07
==========
 * Update after r3258

2010 01 29
==========
 * Move toolbar config to config file

2009 12 01
==========
 * CSS update after r3141

2009 11 30
==========
 * Use explode() rather than split()

2009 10 31
==========
 * Create driver based system for different learning methods

2009 10 29
==========
 * Rename plugin to markasjunk2

2009 10 29
==========
 * Use local_skin_path() (rev 3076)

2009 08 02
==========
 * Added ability to mark ham as unread
 * Added ability to flag/unflag spam/ham
 * Added ability to trigger sa-learn
 * Added config file to control new options