@@ -1,6 +1,10 @@
 Roundcube Webmail MarkASJunk2
 =============================
 
+2010 03 07
+==========
+ * Better toolbar icons
+
 2010 02 23
 ==========
  * Update after r3261
